--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@ body {
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
+  color: black;
 }
 
 .movie-director {
@@ -70,3 +71,4 @@ body {
   padding: 5px 10px;
   background-color: lightskyblue;
 }
+
